# django-mymovies-db

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  TODO.md  conftest.py  docker-compose.yml  make.bat  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
src/: .env.ci  .env.sample  db.sqlite3  manage.py
src/apps/movies/: admin.py  apps.py  forms.py  models.py  urls.py  urls_api.py  views.py
src/apps/movies/api/: serializers.py  viewsets.py
src/apps/movies/migrations/: 0001_initial.py  0002_alter_movie_kp_rating_alter_movie_my_rating_and_more.py  0002_movie_is_series.py  0003_alter_country_options_alter_director_options_and_more.py  0003_movie_num_of_seasons_movie_series_last_year.py  0004_alter_movie_my_rating.py  0005_alter_country_options_alter_director_options_and_more.py  0006_movierating.py  0007_alter_movie_kp_rating_alter_movie_my_rating_and_more.py  0008_alter_movierating_movie_alter_movierating_rating_and_more.py  0009_alter_movierating_rating.py  0010_alter_movierating_rating.py  0011_remove_movie_my_rating.py
src/apps/movies/static/movies/: style.css
src/apps/movies/static/movies/css/: style.css
src/apps/movies/templates/: base_generic.html  index.html
src/apps/movies/templates/movies/: add_country.html  add_director.html  add_genre.html  add_movie.html  detail.html  index.html  movie_detail.html  movie_list.html
src/apps/movies/templatetags/: pagination_extras.py
src/apps/movies/tests/: test_filtering.py  test_fixture.py  test_orm.py  test_views.py
src/core/: settings.py  urls.py  views.py  wsgi.py
src/core/static/core/: style.css
src/core/templates/core/: index.html
src/data/: my_fixture.json
src/locale/ru/LC_MESSAGES/: django.po
src/templates/admin/: base_site.html
